--- a/server/music_controller/frontend/package.json
+++ b/server/music_controller/frontend/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3"
   }
