--- a/server/music_controller/frontend/package.json
+++ b/server/music_controller/frontend/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"@material-ui/core": "^4.12.4",
-		"@material-ui/icons": "^4.11.3"
+		"@material-ui/icons": "^4.11.3",
+		"react-router-dom": "^6.4.3"
 	}
 }
